Fix th eimage locations broken in  r111039
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@111148 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/Narayam/resources/ext.narayam.core/ext.narayam.core.css
+++ b/Narayam/resources/ext.narayam.core/ext.narayam.core.css
@@ -104,29 +104,29 @@ div#narayam-menu a {
 
 div#narayam-menu-items li.narayam-help-link a {
 	/* @embed */
-	background: url('images/help.png') no-repeat scroll left center transparent;
+	background: url('../images/help.png') no-repeat scroll left center transparent;
 	padding-left: 20px;
 	line-height: 1.5em;
 }
 
 li#pt-narayam.narayam-active {
 	/* @embed */
-	background: url('images/narayam-active.png') no-repeat scroll left top transparent;
+	background: url('../images/narayam-active.png') no-repeat scroll left top transparent;
 }
 
 li#pt-narayam.narayam-inactive {
 	/* @embed */
-	background: url('images/narayam-inactive.png') no-repeat scroll left top transparent;
+	background: url('../images/narayam-inactive.png') no-repeat scroll left top transparent;
 }
 
 li.narayam-more-imes-link {
 	/* @embed */
-	background: url('images/closed-ltr.png') no-repeat scroll left center transparent;
+	background: url('../images/closed-ltr.png') no-repeat scroll left center transparent;
 }
 
 li.narayam-more-imes-link.open {
 	/* @embed */
-	background: url('images/open.png') no-repeat scroll left center transparent;
+	background: url('../images/open.png') no-repeat scroll left center transparent;
 }
 li.narayam-more-imes-link a {
 	padding-left: 10px;
